docs: perbarui dokumentasi komponen

--- a/documentations/1. Components.md
+++ b/documentations/1. Components.md
@@ -6,10 +6,11 @@
 2. [Struktur Folder](#struktur-folder)
 3. [Komponen Base](#komponen-base)
 4. [Komponen Layout](#komponen-layout)
-5. [Komponen Shared (@spk)](#komponen-shared-spk)
-6. [Komponen UI](#komponen-ui)
-7. [Stores](#stores)
-8. [Panduan Penggunaan](#panduan-penggunaan)
+5. [Komponen Google Maps](#komponen-google-maps)
+6. [Komponen Shared (@spk)](#komponen-shared-spk)
+7. [Komponen UI](#komponen-ui)
+8. [Stores](#stores)
+9. [Panduan Penggunaan](#panduan-penggunaan)
 
 ---
 
@@ -141,6 +142,90 @@ Panel pengaturan tema yang memungkinkan pengguna mengubah mode terang/gelap, ara
 
 ---
 
+## Komponen Google Maps
+
+Komponen untuk integrasi Google Maps dengan berbagai fitur dan kontrol.
+
+### CustomControl
+
+Komponen untuk menambahkan kontrol kustom pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/customControl.vue`
+
+**Dokumentasi Lengkap:** [CustomControl Documentation](components-documentation.md#customcontrol)
+
+---
+
+### CustomMarker
+
+Komponen marker kustom untuk Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/custommarker.vue`
+
+**Dokumentasi Lengkap:** [CustomMarker Documentation](components-documentation.md#custommarker)
+
+---
+
+### GoogleCircle
+
+Komponen untuk menampilkan lingkaran pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/googleCircle.vue`
+
+**Dokumentasi Lengkap:** [GoogleCircle Documentation](components-documentation.md#googlecircle)
+
+---
+
+### GoogleMarker
+
+Komponen marker standar untuk Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/googleMarker.vue`
+
+**Dokumentasi Lengkap:** [GoogleMarker Documentation](components-documentation.md#googlemarker)
+
+---
+
+### GooglePolygon
+
+Komponen untuk menampilkan polygon pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/googlePolygon.vue`
+
+**Dokumentasi Lengkap:** [GooglePolygon Documentation](components-documentation.md#googlepolygon)
+
+---
+
+### GooglePolyline
+
+Komponen untuk menampilkan polyline pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/googlePolyline.vue`
+
+**Dokumentasi Lengkap:** [GooglePolyline Documentation](components-documentation.md#googlepolyline)
+
+---
+
+### GoogleRectangle
+
+Komponen untuk menampilkan persegi panjang pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/googleRectangle.vue`
+
+**Dokumentasi Lengkap:** [GoogleRectangle Documentation](components-documentation.md#googlerectangle)
+
+---
+
+### MarkerCluster
+
+Komponen untuk mengelompokkan marker pada Google Maps.
+
+**Lokasi:** `resources/js/components/google-maps/markerCluster.vue`
+
+**Dokumentasi Lengkap:** [MarkerCluster Documentation](components-documentation.md#markercluster)
+
+---
+
 ## Komponen Shared (@spk)
 
 Komponen shared adalah komponen yang dapat digunakan kembali di berbagai bagian aplikasi.
@@ -165,33 +250,23 @@ Komponen carousel menggunakan Swiper.js dengan berbagai modul.
 
 ---
 
-### SpkEmployeeCard
+### ChartCards
 
-Card widget untuk menampilkan informasi karyawan.
+Card dengan chart menggunakan ApexCharts.
 
-**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-employeecard.vue`
+**Lokasi:** `resources/js/shared/@spk/chart-cards.vue`
 
-**Dokumentasi Lengkap:** [SpkEmployeeCard Documentation](shared-components-documentation.md#spkemployeecard)
-
----
-
-### SpkProductsCard
-
-Card widget untuk menampilkan informasi produk.
-
-**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-productscard.vue`
-
-**Dokumentasi Lengkap:** [SpkProductsCard Documentation](shared-components-documentation.md#spkproductscard)
+**Dokumentasi Lengkap:** [ChartCards Documentation](shared-components-documentation.md#chartcards)
 
 ---
 
-### SpkSalesCard
+### ChartjsCards
 
-Card widget untuk menampilkan informasi penjualan dengan chart.
+Card dengan chart menggunakan Chart.js.
 
-**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-salescard.vue`
+**Lokasi:** `resources/js/shared/@spk/charts/chartjs-cards.vue`
 
-**Dokumentasi Lengkap:** [SpkSalesCard Documentation](shared-components-documentation.md#spksalescard)
+**Dokumentasi Lengkap:** [ChartjsCards Documentation](shared-components-documentation.md#chartjscards)
 
 ---
 
@@ -215,33 +290,463 @@ Komponen tabel yang dapat dikustomisasi dengan checkbox dan header dinamis.
 
 ---
 
-### ChartCards
+### Komponen Aplikasi Task
 
-Card dengan chart menggunakan ApexCharts.
+#### SpkKanbanCard
 
-**Lokasi:** `resources/js/shared/@spk/chart-cards.vue`
+Card kanban untuk aplikasi task management.
 
-**Dokumentasi Lengkap:** [ChartCards Documentation](shared-components-documentation.md#chartcards)
+**Lokasi:** `resources/js/shared/@spk/applications/task/spk-kanbancard.vue`
 
----
-
-### ChartjsCards
-
-Card dengan chart menggunakan Chart.js.
-
-**Lokasi:** `resources/js/shared/@spk/charts/chartjs-cards.vue`
-
-**Dokumentasi Lengkap:** [ChartjsCards Documentation](shared-components-documentation.md#chartjscards)
+**Dokumentasi Lengkap:** [SpkKanbanCard Documentation](shared-components-documentation.md#spkkanbancard)
 
 ---
 
-### SpkPosSwiperCard
+### Komponen Dashboard
+
+#### SpkPosSwiperCard
 
 Card untuk sistem POS dengan informasi order.
 
 **Lokasi:** `resources/js/shared/@spk/dashboards/spk-posSwiperCard.vue`
 
 **Dokumentasi Lengkap:** [SpkPosSwiperCard Documentation](shared-components-documentation.md#spkposswipercard)
+
+---
+
+#### SpkReusableAnalyticsCard
+
+Card untuk menampilkan data analytics.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-anlyticsCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableAnalyticsCard Documentation](shared-components-documentation.md#spkreusableanalyticscard)
+
+---
+
+#### SpkReusableEcommerceCard
+
+Card untuk menampilkan data e-commerce.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-ecommerceCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableEcommerceCard Documentation](shared-components-documentation.md#spkreusableecommercecard)
+
+---
+
+#### SpkReusableHrmCard
+
+Card untuk menampilkan data HRM.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-hrmCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableHrmCard Documentation](shared-components-documentation.md#spkreusablehrmcard)
+
+---
+
+#### SpkReusableMedicalCard
+
+Card untuk menampilkan data medis.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-medicalcard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableMedicalCard Documentation](shared-components-documentation.md#spkreusablemedicalcard)
+
+---
+
+#### SpkReusableSalesCard
+
+Card untuk menampilkan data penjualan.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-salesCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableSalesCard Documentation](shared-components-documentation.md#spkreusablesalescard)
+
+---
+
+#### SpkReusableSocialMediaCard
+
+Card untuk menampilkan data social media.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reusable-socialmediaCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableSocialMediaCard Documentation](shared-components-documentation.md#spkreusablesocialmediacard)
+
+---
+
+#### SpkReusebleCoursesCard
+
+Card untuk menampilkan data kursus.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reuseble-couresCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusebleCoursesCard Documentation](shared-components-documentation.md#spkreuseblecoursescard)
+
+---
+
+#### SpkReusebleSchoolCard
+
+Card untuk menampilkan data sekolah.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-reuseble-schoolCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusebleSchoolCard Documentation](shared-components-documentation.md#spkreusableschoolcard)
+
+---
+
+#### SpkStockSwiperCard
+
+Card swiper untuk menampilkan data saham.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/spk-stock-swipercard.vue`
+
+**Dokumentasi Lengkap:** [SpkStockSwiperCard Documentation](shared-components-documentation.md#spkstockswipercard)
+
+---
+
+### Komponen Dashboard CRM
+
+#### SpkDealsCard
+
+Card untuk menampilkan data deals CRM.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crm/spk-deals-card.vue`
+
+**Dokumentasi Lengkap:** [SpkDealsCard Documentation](shared-components-documentation.md#spkdealscard)
+
+---
+
+#### SpkReusableCrmCard
+
+Card reusable untuk dashboard CRM.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crm/spk-reusable-crmCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableCrmCard Documentation](shared-components-documentation.md#spkreusablecrmcard)
+
+---
+
+### Komponen Dashboard Crypto
+
+#### SpkReusableCryptoCard
+
+Card reusable untuk dashboard crypto.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-cryptoCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableCryptoCard Documentation](shared-components-documentation.md#spkreusablecryptocard)
+
+---
+
+#### SpkReusableExchangeCard
+
+Card untuk menampilkan data exchange crypto.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-exchangeCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableExchangeCard Documentation](shared-components-documentation.md#spkreusableexchangecard)
+
+---
+
+#### SpkReusableMarketCapCard
+
+Card untuk menampilkan data market cap crypto.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-marketCapCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableMarketCapCard Documentation](shared-components-documentation.md#spkreusablemarketcapcard)
+
+---
+
+#### SpkReusableWalletAddressCard
+
+Card untuk menampilkan alamat wallet crypto.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-walletAddressCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableWalletAddressCard Documentation](shared-components-documentation.md#spkreusablewalletaddresscard)
+
+---
+
+#### SpkReusableWalletCard
+
+Card untuk menampilkan data wallet crypto.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-walletCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableWalletCard Documentation](shared-components-documentation.md#spkreusablewalletcard)
+
+---
+
+### Komponen Dashboard Jobs
+
+#### SpkReusebleJobs
+
+Card reusable untuk dashboard jobs.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/jobs/dashboard/spk-reuseble-jobs.vue`
+
+**Dokumentasi Lengkap:** [SpkReusebleJobs Documentation](shared-components-documentation.md#spkreusablejobs)
+
+---
+
+#### SpkJobDetailsSwiper
+
+Swiper untuk detail pekerjaan.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/jobs/job-details/spk-job-detailsswiper.vue`
+
+**Dokumentasi Lengkap:** [SpkJobDetailsSwiper Documentation](shared-components-documentation.md#spkjobdetailsswiper)
+
+---
+
+### Komponen Dashboard NFT
+
+#### SpkNftReusebleCard
+
+Card reusable untuk dashboard NFT.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/nft/spk-nft-reusebleCard.vue`
+
+**Dokumentasi Lengkap:** [SpkNftReusebleCard Documentation](shared-components-documentation.md#spknftreuseblecard)
+
+---
+
+#### SpkNftSwiperCard
+
+Swiper card untuk dashboard NFT.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/nft/spk-nft-swipercard.vue`
+
+**Dokumentasi Lengkap:** [SpkNftSwiperCard Documentation](shared-components-documentation.md#spknftswipercard)
+
+---
+
+### Komponen Dashboard Projects
+
+#### SpkProjectDashboard
+
+Card untuk dashboard projects.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/projects/spk-project-dashboard.vue`
+
+**Dokumentasi Lengkap:** [SpkProjectDashboard Documentation](shared-components-documentation.md#spkprojectdashboard)
+
+---
+
+### Komponen Pages
+
+#### SpkReusableTeamCard
+
+Card reusable untuk menampilkan team member.
+
+**Lokasi:** `resources/js/shared/@spk/pages/spk-reusable-teamCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableTeamCard Documentation](shared-components-documentation.md#spkreusableteamcard)
+
+---
+
+#### SpkBlogCard
+
+Card untuk menampilkan blog post.
+
+**Lokasi:** `resources/js/shared/@spk/pages/blog/spk-blogcard.vue`
+
+**Dokumentasi Lengkap:** [SpkBlogCard Documentation](shared-components-documentation.md#spkblogcard)
+
+---
+
+#### SpkPopularCard
+
+Card untuk menampilkan blog popular.
+
+**Lokasi:** `resources/js/shared/@spk/pages/blog/spk-popularcard.vue`
+
+**Dokumentasi Lengkap:** [SpkPopularCard Documentation](shared-components-documentation.md#spkpopularcard)
+
+---
+
+#### SpkClientsSwiper
+
+Swiper untuk menampilkan client testimonials.
+
+**Lokasi:** `resources/js/shared/@spk/pages/landingpage/spk-clientsSwiper.vue`
+
+**Dokumentasi Lengkap:** [SpkClientsSwiper Documentation](shared-components-documentation.md#spkclientsswiper)
+
+---
+
+#### SpkBasicPriceCard
+
+Card untuk menampilkan pricing basic.
+
+**Lokasi:** `resources/js/shared/@spk/pages/pricing/spk-basicpricecard.vue`
+
+**Dokumentasi Lengkap:** [SpkBasicPriceCard Documentation](shared-components-documentation.md#spkbasicpricecard)
+
+---
+
+#### SpkPriceCard
+
+Card untuk menampilkan pricing.
+
+**Lokasi:** `resources/js/shared/@spk/pages/pricing/spk-pricecard.vue`
+
+**Dokumentasi Lengkap:** [SpkPriceCard Documentation](shared-components-documentation.md#spkpricecard)
+
+---
+
+#### TestimonialsStyles1
+
+Komponen testimonials style 1.
+
+**Lokasi:** `resources/js/shared/@spk/pages/testimonials/TestimonialsStyles1.vue`
+
+**Dokumentasi Lengkap:** [TestimonialsStyles1 Documentation](shared-components-documentation.md#testimonialsstyles1)
+
+---
+
+#### TestimonialsStyles2
+
+Komponen testimonials style 2.
+
+**Lokasi:** `resources/js/shared/@spk/pages/testimonials/TestimonialsStyles2.vue`
+
+**Dokumentasi Lengkap:** [TestimonialsStyles2 Documentation](shared-components-documentation.md#testimonialsstyles2)
+
+---
+
+#### TestimonialsStyles3
+
+Komponen testimonials style 3.
+
+**Lokasi:** `resources/js/shared/@spk/pages/testimonials/TestimonialsStyles3.vue`
+
+**Dokumentasi Lengkap:** [TestimonialsStyles3 Documentation](shared-components-documentation.md#testimonialsstyles3)
+
+---
+
+#### TestimonialsStyles4
+
+Komponen testimonials style 4.
+
+**Lokasi:** `resources/js/shared/@spk/pages/testimonials/TestimonialsStyles4.vue`
+
+**Dokumentasi Lengkap:** [TestimonialsStyles4 Documentation](shared-components-documentation.md#testimonialsstyles4)
+
+---
+
+### Komponen Reusable UI Elements
+
+#### SpkBgCards
+
+Card dengan background warna.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkbgcards.vue`
+
+**Dokumentasi Lengkap:** [SpkBgCards Documentation](shared-components-documentation.md#spkbgcards)
+
+---
+
+#### SpkBorderedCards
+
+Card dengan border.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkborderedcards.vue`
+
+**Dokumentasi Lengkap:** [SpkBorderedCards Documentation](shared-components-documentation.md#spkborderedcards)
+
+---
+
+#### SpkCard
+
+Card reusable dasar.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkcard.vue`
+
+**Dokumentasi Lengkap:** [SpkCard Documentation](shared-components-documentation.md#spkcard)
+
+---
+
+#### SpkCollapseCard
+
+Card dengan fungsi collapse/expand.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkcollapsecard.vue`
+
+**Dokumentasi Lengkap:** [SpkCollapseCard Documentation](shared-components-documentation.md#spkcollapsecard)
+
+---
+
+#### SpkHorizontalCard
+
+Card dengan layout horizontal.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkhorizontalcard.vue`
+
+**Dokumentasi Lengkap:** [SpkHorizontalCard Documentation](shared-components-documentation.md#spkhorizontalcard)
+
+---
+
+#### SpkImageOverlayCard
+
+Card dengan image overlay.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spkimageoverlaycard.vue`
+
+**Dokumentasi Lengkap:** [SpkImageOverlayCard Documentation](shared-components-documentation.md#spkimageoverlaycard)
+
+---
+
+#### SpkNavigationCard
+
+Card dengan navigation tabs.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spknavigationcard.vue`
+
+**Dokumentasi Lengkap:** [SpkNavigationCard Documentation](shared-components-documentation.md#spknavigationcard)
+
+---
+
+#### SpkTitleCards
+
+Card dengan custom title styling.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-uielements/reusable-cards/spktitlecards.vue`
+
+**Dokumentasi Lengkap:** [SpkTitleCards Documentation](shared-components-documentation.md#spktitlecards)
+
+---
+
+### Komponen Reusable Widgets
+
+#### SpkEmployeeCard
+
+Card widget untuk menampilkan informasi karyawan.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-employeecard.vue`
+
+**Dokumentasi Lengkap:** [SpkEmployeeCard Documentation](shared-components-documentation.md#spkemployeecard)
+
+---
+
+#### SpkProductsCard
+
+Card widget untuk menampilkan informasi produk.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-productscard.vue`
+
+**Dokumentasi Lengkap:** [SpkProductsCard Documentation](shared-components-documentation.md#spkproductscard)
+
+---
+
+#### SpkSalesCard
+
+Card widget untuk menampilkan informasi penjualan dengan chart.
+
+**Lokasi:** `resources/js/shared/@spk/reusable-widgets/spk-salescard.vue`
+
+**Dokumentasi Lengkap:** [SpkSalesCard Documentation](shared-components-documentation.md#spksalescard)
 
 ---
 
