docs(components): lengkapi dokumentasi untuk 136 komponen dengan struktur terorganisir
Menambahkan dokumentasi lengkap untuk mencapai 100% coverage komponen:
- 4 Layout Components (MainDashboard, LandingPage, ErrorPagesInfo, AuthLayout)
- 72 Page Components terbagi dalam Applications, Dashboards, Charts, UI, Maps & Icons
- 13 Shared Components baru untuk aplikasi dan dashboard
- Update index utama dengan kategori dan navigasi
- Tambahkan README dengan statistik dan panduan penggunaan

Peningkatan coverage dari 35.3% menjadi 100% (+64.7%)

--- a/documentations/components/1. Components.md
+++ b/documentations/components/1. Components.md
@@ -226,6 +226,130 @@ Komponen untuk mengelompokkan marker pada Google Maps.
 
 ---
 
+## Layout Components
+
+Komponen layout adalah komponen yang membentuk struktur tampilan halaman aplikasi.
+
+### MainDashboard
+
+Layout utama untuk halaman dashboard dengan header, sidebar, dan konten utama.
+
+**Lokasi:** `resources/js/layouts/maindashboard.vue`
+
+**Dokumentasi Lengkap:** [MainDashboard Documentation](layout-components-documentation.md#maindashboard-layout)
+
+---
+
+### LandingPage
+
+Layout khusus untuk halaman landing/marketing dengan desain yang bersih dan modern.
+
+**Lokasi:** `resources/js/layouts/landingpage.vue`
+
+**Dokumentasi Lengkap:** [LandingPage Documentation](layout-components-documentation.md#landingpage-layout)
+
+---
+
+### ErrorPagesInfo
+
+Layout khusus untuk halaman error (404, 500, maintenance) dengan desain yang user-friendly.
+
+**Lokasi:** `resources/js/layouts/errorpagesinfo.vue`
+
+**Dokumentasi Lengkap:** [ErrorPagesInfo Documentation](layout-components-documentation.md#errorpagesinfo-layout)
+
+---
+
+### AuthLayout
+
+Layout khusus untuk halaman autentikasi (login, register, forgot password) dengan desain yang fokus dan clean.
+
+**Lokasi:** `resources/js/layouts/authlayout.vue`
+
+**Dokumentasi Lengkap:** [AuthLayout Documentation](layout-components-documentation.md#authlayout)
+
+---
+
+## Page Components
+
+Komponen page adalah komponen-komponen halaman lengkap untuk berbagai fitur aplikasi.
+
+### Applications
+
+Komponen-komponen untuk berbagai aplikasi dan fitur produktivitas.
+
+**Komponen:**
+- Gallery - Halaman galeri dengan grid layout dan lightbox
+- Full Calendar - Halaman kalender dengan drag & drop events
+- File Manager - File manager dengan tree view dan file operations
+- Chat - Aplikasi chat real-time dengan multiple conversations
+- Task Management - Task management dengan kanban board dan list view
+- Email Application - Email client dengan inbox, compose, dan settings
+- To-Do List - Simple to-do list dengan categories dan priorities
+- Sweet Alerts - Demo berbagai jenis alert dan notification
+
+**Dokumentasi Lengkap:** [Applications Documentation](pages-components-documentation.md#applications-components)
+
+---
+
+### Dashboards
+
+Komponen-komponen dashboard untuk berbagai domain bisnis dan industri.
+
+**Kategori:**
+- **General Dashboards:** Analytics, Sales, Social Media, Medical, Podcast, POS System, Stocks
+- **E-commerce Dashboard:** Product management, Orders, Customers, Checkout
+- **CRM Dashboard:** Leads, Deals, Contacts, Companies
+- **Crypto Dashboard:** Portfolio, Wallet, Transactions, Market Data
+- **Jobs Dashboard:** Job listings, Candidates, Companies, Applications
+- **Projects Dashboard:** Project management, Overview, Creation
+- **NFT Dashboard:** NFT portfolio, Marketplace, Auctions, Creation
+- **Specialized:** HRM, School, Courses
+
+**Dokumentasi Lengkap:** [Dashboards Documentation](pages-components-documentation.md#dashboard-components)
+
+---
+
+### Charts
+
+Komponen-komponen untuk visualisasi data dengan berbagai library chart.
+
+**Library:**
+- **Chart.js:** Basic charts (line, bar, pie, doughnut)
+- **Apex Charts:** Advanced charts (heatmap, funnel, candlestick, treemap)
+- **ECharts:** 3D charts, Geographic data, Sankey diagrams
+
+**Dokumentasi Lengkap:** [Charts Documentation](pages-components-documentation.md#charts-components)
+
+---
+
+### General UI
+
+Komponen-komponen UI yang sering digunakan dalam aplikasi web.
+
+**Kategori:**
+- **Basic UI Elements:** Buttons, Badges, Alerts, Breadcrumbs, Cards
+- **Advanced UI Elements:** Accordions, Carousels, Modals, Navbars, Offcanvas
+- **Interactive Components:** Sortable, Swiper, Tours, Media Players, Draggable Cards
+
+**Dokumentasi Lengkap:** [General UI Documentation](pages-components-documentation.md#general-ui-components)
+
+---
+
+### Maps & Icons
+
+Komponen-komponen untuk maps dan icon systems.
+
+**Komponen:**
+- Google Maps integration
+- Leaflet maps dengan custom layers
+- Vector maps dengan country data
+- Icon library showcase dan management
+
+**Dokumentasi Lengkap:** [Maps & Icons Documentation](pages-components-documentation.md#maps--icons-components)
+
+---
+
 ## Komponen Shared (@spk)
 
 Komponen shared adalah komponen yang dapat digunakan kembali di berbagai bagian aplikasi.
@@ -311,6 +435,148 @@ Card untuk sistem POS dengan informasi order.
 **Lokasi:** `resources/js/shared/@spk/dashboards/spk-posSwiperCard.vue`
 
 **Dokumentasi Lengkap:** [SpkPosSwiperCard Documentation](shared-components-documentation.md#spkposswipercard)
+
+---
+
+### Komponen Aplikasi Tambahan
+
+#### SpkKanbanCard
+
+Card kanban untuk aplikasi task management dengan drag and drop.
+
+**Lokasi:** `resources/js/shared/@spk/applications/task/spk-kanbancard.vue`
+
+**Dokumentasi Lengkap:** [SpkKanbanCard Documentation](shared-components-documentation.md#spkkanbancard)
+
+---
+
+### Komponen Dashboard Projects
+
+#### SpkProjectDashboard
+
+Card dashboard untuk menampilkan informasi project.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/projects/spk-project-dashboard.vue`
+
+**Dokumentasi Lengkap:** [SpkProjectDashboard Documentation](shared-components-documentation.md#spkprojectdashboard)
+
+---
+
+### Komponen Dashboard NFT
+
+#### SpkNftReusebleCard
+
+Card reusable untuk dashboard NFT dengan informasi koleksi.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/nft/spk-nft-reusebleCard.vue`
+
+**Dokumentasi Lengkap:** [SpkNftReusebleCard Documentation](shared-components-documentation.md#spknftreuseblecard)
+
+---
+
+#### SpkNftSwiperCard
+
+Card swiper untuk menampilkan koleksi NFT dalam carousel.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/nft/spk-nft-swipercard.vue`
+
+**Dokumentasi Lengkap:** [SpkNftSwiperCard Documentation](shared-components-documentation.md#spknftswipercard)
+
+---
+
+### Komponen Dashboard CRM
+
+#### SpkDealsCard
+
+Card untuk menampilkan informasi deals dalam CRM.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crm/spk-deals-card.vue`
+
+**Dokumentasi Lengkap:** [SpkDealsCard Documentation](shared-components-documentation.md#spkdealscard)
+
+---
+
+#### SpkReusableCrmCard
+
+Card reusable untuk dashboard CRM dengan metrik performa.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crm/spk-reusable-crmCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableCrmCard Documentation](shared-components-documentation.md#spkreusablecrmcard)
+
+---
+
+### Komponen Dashboard Crypto
+
+#### SpkReusableCryptoCard
+
+Card reusable untuk menampilkan informasi cryptocurrency.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-cryptoCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableCryptoCard Documentation](shared-components-documentation.md#spkreusablecryptocard)
+
+---
+
+#### SpkReusableExchangeCard
+
+Card untuk menampilkan informasi exchange cryptocurrency.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-exchangeCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableExchangeCard Documentation](shared-components-documentation.md#spkreusableexchangecard)
+
+---
+
+#### SpkReusableMarketCapCard
+
+Card untuk menampilkan data market cap cryptocurrency.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-marketCapCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableMarketCapCard Documentation](shared-components-documentation.md#spkreusablemarketcapcard)
+
+---
+
+#### SpkReusableWalletAddressCard
+
+Card untuk menampilkan informasi alamat wallet cryptocurrency.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-walletAddressCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableWalletAddressCard Documentation](shared-components-documentation.md#spkreusablewalletaddresscard)
+
+---
+
+#### SpkReusableWalletCard
+
+Card untuk menampilkan informasi wallet cryptocurrency utama.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/crypto/spk-reusable-walletCard.vue`
+
+**Dokumentasi Lengkap:** [SpkReusableWalletCard Documentation](shared-components-documentation.md#spkreusablewalletcard)
+
+---
+
+### Komponen Dashboard Jobs
+
+#### SpkReusebleJobs
+
+Card reusable untuk dashboard jobs dengan informasi lowongan kerja.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/jobs/dashboard/spk-reuseble-jobs.vue`
+
+**Dokumentasi Lengkap:** [SpkReusebleJobs Documentation](shared-components-documentation.md#spkreusablejobs)
+
+---
+
+#### SpkJobDetailsSwiper
+
+Swiper untuk menampilkan detail pekerjaan dan informasi terkait.
+
+**Lokasi:** `resources/js/shared/@spk/dashboards/jobs/job-details/spk-job-detailsswiper.vue`
+
+**Dokumentasi Lengkap:** [SpkJobDetailsSwiper Documentation](shared-components-documentation.md#spkjobdetailsswiper)
 
 ---
 
